# AUProject

./: .gitignore  CMakeLists.txt  JUCE_SETUP.md  README.md  build_and_install.sh
include/: JucePlugin_Common.h  PluginEditor.h  PluginProcessor.h
resources/: Info.plist
src/: PluginEditor.cpp  PluginProcessor.cpp
